RESOLVED FIXED108156
[WK2] Fix unused parameter build warning
https://bugs.webkit.org/show_bug.cgi?id=108156
Summary [WK2] Fix unused parameter build warning
Jinwoo Song
Reported 2013-01-28 23:46:06 PST
/mnt/buildbot/efl-linux-slave-1/efl-linux-64-release/build/Source/WebKit2/WebProcess/Plugins/Netscape/NetscapePlugin.h:250:18: warning: unused parameter ‘bytes’ [-Wunused-parameter] /mnt/buildbot/efl-linux-slave-1/efl-linux-64-release/build/Source/WebKit2/WebProcess/Plugins/Netscape/NetscapePlugin.h:250:18: warning: unused parameter ‘length’ [-Wunused-parameter] /mnt/buildbot/efl-linux-slave-1/efl-linux-64-release/build/Source/WebKit2/WebProcess/Plugins/PluginProxy.h:136:18: warning: unused parameter ‘bytes’ [-Wunused-parameter] /mnt/buildbot/efl-linux-slave-1/efl-linux-64-release/build/Source/WebKit2/WebProcess/Plugins/PluginProxy.h:136:18: warning: unused parameter ‘length’ [-Wunused-parameter]
Attachments
Patch (2.33 KB, patch)
2013-01-28 23:49 PST, Jinwoo Song
no flags
Jinwoo Song
Comment 1 2013-01-28 23:49:27 PST
Kentaro Hara
Comment 2 2013-01-28 23:57:57 PST
Comment on attachment 185177 [details] Patch ok
WebKit Review Bot
Comment 3 2013-01-29 00:56:39 PST
Comment on attachment 185177 [details] Patch Clearing flags on attachment: 185177 Committed r141078: <http://trac.webkit.org/changeset/141078>
WebKit Review Bot
Comment 4 2013-01-29 00:56:42 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.