[WK2] Fix unused parameter build warning https://bugs.webkit.org/show_bug.cgi?id=108156

Patch by Jinwoo Song <jinwoo7.song@samsung.com> on 2013-01-29
Reviewed by Kentaro Hara.

Comment out the unused parameters to fix the build warnings.

* WebProcess/Plugins/Netscape/NetscapePlugin.h:
* WebProcess/Plugins/PluginProxy.h:

Canonical link: https://commits.webkit.org/126380@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@141078 268f45cc-cd09-0410-ab3c-d52691b4dbfc